# DTSA-5506

./: .gitignore  cu_boulder.code-workspace  eda.ipynb  fields 2.csv  interim-layout.pages  pyproject.toml
data/: fields.csv  fields.numbers
src/: 01 Preprocessing.ipynb  03 Data Modelling - Classification.ipynb  03 Data Modelling - Clustering - Gower.ipynb  03 Data Modelling - Clustering - MCA Kmeans 2.ipynb  03 Data Modelling - Clustering - MCA Kmeans 2b.ipynb  03 Data Modelling - Clustering - MCA Kmeans 3.ipynb  03 Data Modelling - Clustering - MCA Kmeans 3b.ipynb  03 Data Modelling - Clustering - MCA Kmeans 4.ipynb  03 Data Modelling - Clustering - MCA Kmeans Final.ipynb  03 Data Modelling - Clustering - MCA Kmeans.ipynb  03 Data Modelling - FP Growth - mlxtend.ipynb  03 Data Modelling - FP Growth - pyfpgrowth.ipynb  Preprocessing.ipynb  filtered_rules.csv
submissions/w2/: presentation.key
submissions/w3/: interim-layout.pages  presentation.key
submissions/w4/: interim-layout.pages  presentation.key
