[tool.poetry]
name = "cu-boulder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
lxml = "^5.2.1"
beautifulsoup4 = "^4.12.3"
plotly = "^5.21.0"
numpy = "^1.26.4"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
